css/navbar.css
.navbar {
    display: flex;
    align-items: center;
    width: 100%;
    height: 4rem;
    position: fixed;
    background-color: rgba(39, 36, 36, .7);
    flex-wrap: wrap;
    z-index: 1;
}

.logo-section {
    margin: 0;
    margin-left: 4.5rem;
}

.logo-letter {
    font-size: 2rem;
}

.menu-mobile-button {
    height: 5vh;
    width: 10vw;
    position: absolute;
    top: 0;
    left: 0;
    margin: 1rem 1rem 0 1rem;
    opacity: 0;
}

#burger-button {
    opacity: 1;
}

.categories-container {
    display: none;
    position: absolute;
    top: 4rem;
    left: 0;
    height: 100vh;
    width: 45vw;
    background-color: var(--main-color);
}

.menu-mobile-button:checked ~ .categories-container {
    display: block;
}
.search-form {
    display: flex;
    flex: 1;
    justify-content: flex-end;
}

#search-box {
    width: 6.7rem;
    height: 1.6rem;
    margin: 1rem 1rem;
    border: 1px solid #fff;
    border-radius: .15rem;
    padding: .5rem 0rem .5rem .5rem;
    font-size: .9rem;
    background-color: var(--background-color);
    color: var(--letter-color);
}

#search-box::placeholder {
    color: var(--letter-color);
    opacity: 1; /* Firefox */
}

.categories {
    list-style: none;
    padding-left: 1.2rem;
}

.category {
    margin-top: 1.5rem;
}

.category > a {
    text-decoration: none;
    color: var(--letter-color);
    font-weight: bold;
}

.sign-out-button {
    position: relative;
    width: 80%;
    padding: .3rem;
    background-color: var(--letter-color);
    color: var(--background-color);
    border: 0;
    text-align: center;
    border-radius: .3rem;
    font-size: 1rem;
    font-weight: 700;
}

.sign-out-button-desktop {
    display: none;
}


/* Media queries */

/* ~Tablet */
@media all and (min-width: 480px) {
    .navbar {
        background-color: rgb(39, 36, 36);
    }

    .menu-mobile-button {
        display: none;
    }

    .categories-container {
        display: block;
        width: 30vw;
    }

    .logo-section {
        margin-left: 1.5rem;
    }

    .logo-letter {
        font-size: 3.5rem;
    }

    #search-box {
        width: 10rem;
    }
}


/* ~Desktop */
@media all and (min-width: 839px) {
    .navbar {
        height: 4.6rem;
        background-color: rgba(39, 36, 36, .7);
    }

    .logo-letter {
        font-size: 4rem;
    }

    .categories-container {
        position: initial;
        top: initial;
        left: initial;
        height: auto;
        width: auto;
        background-color: transparent;
        flex: 1;
    }

    .categories {
        display: flex;
        justify-content: flex-end;

    }

    .category {
        margin: 0;
    }

    .category a {
        /* padding: 46px 1rem; */
        padding: 1.5rem;
    }

    .category a:hover {
        background-color: var(--main-color);
    }
    
    .sign-out-button {
        display: none;
    }

    .search-form {
        flex: none;
    }

    #search-box {
        height: 1.8rem;
        margin: 1rem 1rem 1rem .8rem;
    }

    .sign-out-button-desktop {
        display: block;
        margin: 0;
        margin-right: 1rem;
        padding: .5rem;
        background-color: var(--main-color);
        color: var(--letter-color);
        border: 0;
        text-align: center;
        border-radius: .3rem;
        font-size: 1rem;
        font-weight: 700;
        cursor: pointer;
    }

    .sign-out-button-desktop:hover {
        background-color: var(--hover-color);
    }
}

